--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,15 +8,22 @@
     <link rel="stylesheet" href="css/style.css">
     <title>JavaScript_11</title>
 </head>
+
 <body>
     <div class="main">
         <div class="main-cards">
-            <div class="card first"></div>
-            <div class="card second"></div>
-            <div class="card third"></div>
+            <div class="switchlabel">
+                <div class="circle"></div>
+            </div>
+            <div class="cards">
+                <div class="card first"></div>
+                <div class="card second"></div>
+                <div class="card third"></div>
+            </div>
         </div>
     </div>
 
     <script type="text/javascript" src="js/script.js"></script>
 </body>
+
 </html>
