--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <body>
     <div class="main">
+        <div class="txt">Cool hovering cards</div>
         <div class="main-cards">
             <div class="switchlabel">
                 <div class="circle"></div>
