--- a/index.html
+++ b/index.html
@@ -17,9 +17,15 @@
                 <div class="circle"></div>
             </div>
             <div class="cards">
-                <div class="card first"></div>
-                <div class="card second"></div>
-                <div class="card third"></div>
+                <div class="card first">
+                    <input class="input-txt" placeholder="Card">
+                </div>
+                <div class="card second">
+                    <input class="input-txt" placeholder="Card">
+                </div>
+                <div class="card third">
+                    <input class="input-txt" placeholder="Card">
+                </div>
             </div>
         </div>
     </div>
